--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+/* 
+*{
+    border:2px solid white;
+} */
 
 
 @layer utilities {
